# genai-product-catalog

./: .gitignore  README.md  genai-product-catalog.code-workspace  user.bazelrc
.github/workflows/: main.old  main.yaml
.trunk/: actions  logs  notifications  out  tools  trunk.yaml
applied-ai/: .env  CONTRIBUTING.md  WORKSPACE
applied-ai/docs/config/_default/: config.yaml
applied-ai/examples/service/routers/: products.py
applied-ai/google/cloud/ml/applied/model/: BUILD.bazel
applied-ai/legacy/notebooks/: 4_attribute_generation.ipynb
applied-ai/legacy/notebooks/vectorSearchIndexUpdate/: NB4_create_streaming_index_with_filters.ipynb
archives/experiments/: .gitignore  CONTRIBUTORS.md
archives/experiments/docs/: doc-gen.py
archives/experiments/examples/loader/: .gcloudignore
archives/experiments/examples/notebooks/: setup.ipynb
conf/: BUILD.bazel  app.toml  requirements.in  requirements.txt
demos/digital-commerce/: .gitignore  .prettierrc  DetailedSetupGuilde.md  NOTICE  README.md  migrations.json  nx.json  package-lock.json  package.json
demos/digital-commerce-adk/: .gitignore  GEMINI.md  LICENSE  NOTICE  README.md  deloy.sh  pyproject.toml
demos/digital-commerce-adk/agents/mock_agent/: agent.py
demos/digital-commerce-adk/catalog_enrichment_agent/: __init__.py  agent.py  attribute_mapper.py  category_detector.py  image_loader.py  judge.py  product_extractor.py
demos/digital-commerce-adk/catalog_enrichment_agent/callbacks/image_downloader/: __init__.py  main.py
demos/digital-commerce-adk/catalog_enrichment_agent/tools/attributes/: main.py
demos/digital-commerce-adk/client/: main.py  test_main.py
demos/digital-commerce-adk/resources/: .gitignore  README.md
demos/digital-commerce/apps/api/: .env  package.json  project.json  webpack.config.js
demos/digital-commerce/apps/demo/: .env  index.html  project.json  vite.config.mts
demos/digital-commerce/libs/model/: project.json
demos/digital-commerce/support/terraform/: main.tf
digital-commerce/: example-dispatch.yaml  nx.json  package.json
digital-commerce/apps/api/: .env  tsconfig.app.json  webpack.config.js
digital-commerce/apps/api/src/: state.ts  utils.ts
digital-commerce/apps/demo/: vite.config.mts
digital-commerce/apps/demo/public/: example-app.yaml
digital-commerce/libs/model/: package.json  vite.config.ts
digital-commerce/support/terraform/: main.tf
docs/: 404.html  BUILD  configRelearn.toml  index.html  robots.txt  sitemap.xml
docs/config/_default/: config.yaml  params.yaml
docs/content/en/: _index.md
docs/contributing/: index.html
docs/contributing/code_of_conduct/: index.html
docs/contributing/code_style_guide/: index.html
docs/contributing/contributors/: index.html
docs/data/menu/: extra.yaml  more.yaml
docs/js/: mermaid-bd9b7641.bundle.min.js
docs/modules/: index.html
docs/modules/applied/: index.html
docs/modules/attributes/: index.html
docs/modules/categories/: index.html
docs/modules/embeddings/: index.html
docs/modules/images/: index.html
docs/modules/marketing/: index.html
docs/modules/model/: index.html
docs/modules/nearest_neighbors/: index.html
docs/modules/utilities/: index.html
docs/search/: en.config.min.json  en.data.min.json
docs/tags/: index.html
docs/tags/page/1/: index.html
docs/toolchain/: index.html
examples/loader/: BUILD.bazel  Dockerfile  dataflow_loader.py  model.py  publish_csv.py  requirements.in  requirements.txt
examples/loader/models/: BUILD.bazel
examples/loader/terraform/: .terraform.lock.hcl  outputs.tf  project.tf  terraform.tfstate.backup  vector-search-index.tf
examples/loader/terraform/files/: vector_search_init.jsonl
examples/service/: BUILD.bazel
examples/service/routers/: images.py
experiments/: .bazelrc  applied-ai.code-workspace  setup.py
experiments/conf/: BUILD.bazel  copy_file_groups.bzl  requirements.txt
experiments/docs/: BUILD  configRelearn.toml  docs.bzl
experiments/docs/assets/scss/: variables.scss
experiments/docs/content/en/: _index.md
experiments/docs/static/: custom.css
experiments/examples/loader/: PROVISION.md  README.md  __init__.py  metadata.json  publish_csv.py  setup.py  streaming-beam.json
experiments/examples/loader/schema/: bq-pdc.sql
experiments/examples/loader/terraform/: .terraform.lock.hcl  bigquery.tf  main.tf  project.tf  service-accounts.tf  storage.tf  variables.tf  version.tf  vpc.tf
experiments/examples/notebooks/: test.ipynb
experiments/examples/service/: BUILD.bazel  __init__.py  main.py  main_test.py  run.py
experiments/examples/service/models/: checks_model.py  common_model.py
experiments/google/cloud/ml/applied/attributes/: BUILD.bazel  attributes.py
experiments/google/cloud/ml/applied/embeddings/: BUILD.bazel  embeddings_test.py
experiments/google/cloud/ml/applied/images/: BUILD.bazel
experiments/google/cloud/ml/applied/knn/: BUILD.bazel  nearest_neighbors.py
experiments/google/cloud/ml/applied/marketing/: BUILD.bazel  marketing.py
experiments/google/cloud/ml/applied/utils/: BUILD.bazel
google/cloud/ml/applied/: BUILD.bazel
google/cloud/ml/applied/categories/: BUILD.bazel  category_test.py
google/cloud/ml/applied/model/: README.md
modules/digital-commerce/: .gitignore  NOTICE  tsconfig.base.json
modules/digital-commerce/apps/api/: package.json
modules/product-enrichment/: NOTICE  README.md  env.toml  mkdocs.yml  pyproject.toml
modules/product-enrichment/docs/: contributors.md  developer-setup.md
product-enrichment/: .gitignore  README.md  env.toml  pyproject.toml
product-enrichment/docs/: index.md
product-enrichment/examples/common/: message_example.json
product-enrichment/src/api/: instrument.py  product.py  prompts.py  server.py
product-enrichment/src/cli/: __init__.py  main.py
product-enrichment/src/common/: agents.py  config.py  cor.py  messages.py  model.py  utils.py
product-enrichment/src/db/: dao.py  gemini_prompt_dao.py  main.py  product_dao.py  prompts.py
product-enrichment/src/enrichment/: chain.py  gemini_commands.py
product-enrichment/support/terraform/: main.tf
(+114 files in other folders)
