load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("@python_deps//:requirements.bzl", "requirement")

PY_DEPS = [
    requirement("requests"),
    requirement("en_core_web_sm"),
    requirement("pandas"),
    requirement("jsonpickle"),
    requirement("numpy"),
    requirement("scipy"),
    requirement("spacy"),
    requirement("spacy-cleaner"),
    requirement("jinja2"),
]

py_library(
    name = "loader_library",
    srcs = [
        "__init__.py",
        "chain.py",
        "model.py",
        "//examples/loader/commands",
    ],
    imports = [".."],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = PY_DEPS,
)

py_binary(
    name = "loader",
    srcs = [
        "loader.py",
    ],
    data = [
        "//conf:config",
        "//third_party/flipkart:flipkart_data",
    ],
    imports = [".."],
    deps = [
        ":loader_library",
    ] + PY_DEPS,
)

py_test(
    name = "chain_test",
    size = "small",
    srcs = [
        "chain_test.py",
    ],
    imports = [".."],
    deps = [
        ":loader_library",
    ] + PY_DEPS,
)
