load("@python_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

PY_DEPS = [
    requirement("requests"),
    requirement("en_core_web_sm"),
    requirement("pandas"),
    requirement("jsonpickle"),
    requirement("numpy"),
    requirement("scipy"),
    requirement("spacy"),
    requirement("spacy-cleaner"),
    requirement("jinja2"),
]

py_library(
    name = "loader_library",
    srcs = [
        "__init__.py",
        "publish_csv.py",
        "//examples/loader/models",
    ],
    imports = [".."],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = PY_DEPS,
)

py_binary(
    name = "dataflow_loader",
    srcs = [
        "dataflow_loader.py",
    ],
    data = [
        "//conf:config",
        "//third_party/flipkart:flipkart_data",
    ],
    imports = [".."],
    deps = [
        ":loader_library",
    ] + PY_DEPS,
)

# py_test(
#     name = "chain_test",
#     size = "small",
#     srcs = [
#         "chain_test.py",
#     ],
#     imports = [".."],
#     deps = [
#         ":loader_library",
#     ] + PY_DEPS,
# )
