load("@python_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

PY_DEPS = [
    requirement("pandas"),
    requirement("spacy"),
    requirement("spacy-cleaner"),
]

py_library(
    name = "models",
    srcs = [
        "__init__.py",
        "model.py",
    ],
    imports = [".."],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = PY_DEPS,
)