load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@python_deps//:requirements.bzl", "requirement")

PY_DEPS = [
    requirement("google-cloud-aiplatform"),
    "//google/cloud/ml/applied",
    "//google/cloud/ml/applied/model",
    "//google/cloud/ml/applied/utils",
    "//google/cloud/ml/applied/knn",
    "//google/cloud/ml/applied/embeddings",
]

py_library(
    name = "attributes",
    srcs = [
        "__init__.py",
        "attributes.py",
    ],
    imports = ["."],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = PY_DEPS,
)

py_test(
    name = "attributes_test",
    size = "small",
    srcs = ["attributes_test.py"],
    imports = ["."],
    deps = [":attributes"] + PY_DEPS,
)
