load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@python_deps//:requirements.bzl", "requirement")

PY_DEPS = [
    requirement("google-cloud-aiplatform"),
    "//google/cloud/ml/applied",
    "//google/cloud/ml/applied/utils",
]

py_library(
    name = "embeddings",
    srcs = [
        "__init__.py",
        "embeddings.py",
        "search.py",
    ],
    imports = ["."],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = PY_DEPS,
)

py_test(
    name = "embeddings_test",
    size = "small",
    srcs = ["embeddings_test.py"],
    imports = ["."],
    deps = [":embeddings"] + PY_DEPS,
)
