load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@python_deps//:requirements.bzl", "requirement")

PY_DEPS = [
    requirement("google-cloud-aiplatform"),
    "//google/cloud/ml/applied/model",
    "//google/cloud/ml/applied/utils",
]

py_library(
    name = "images",
    srcs = [
        "__init__.py",
        "image_to_text.py",
    ],
    imports = ["."],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = PY_DEPS,
)

# py_test(
#     name = "embeddings_test",
#     srcs = ["embeddings_test.py"],
#     imports = ["."],
#     deps = [":embeddings"],
# )
