load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@python_deps//:requirements.bzl", "requirement")

PY_DEPS = [
    requirement("google-cloud-aiplatform"),
    "//google/cloud/ml/applied",
    "//google/cloud/ml/applied/utils",
]

py_library(
    name = "knn",
    srcs = [
        "__init__.py",
        "nearest_neighbors.py",
    ],
    imports = ["."],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = PY_DEPS,
)

py_test(
    name = "nearest_neighbors_test",
    size = "small",
    srcs = ["nearest_neighbors_test.py"],
    imports = ["."],
    deps = [":knn"] + PY_DEPS,
)
