load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@python_deps//:requirements.bzl", "requirement")

PY_DEPS = [
    requirement("google-cloud-aiplatform"),
    "//google/cloud/ml/applied",
    "//google/cloud/ml/applied/model",
    "//google/cloud/ml/applied/utils",
]

py_library(
    name = "marketing",
    srcs = [
        "__init__.py",
        "marketing.py",
    ],
    imports = ["."],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = PY_DEPS,
)

py_test(
    name = "marketing_test",
    size = "small",
    srcs = ["marketing_test.py"],
    imports = ["."],
    deps = [":marketing"] + PY_DEPS,
)
